Increased perm gen space to 256M (default was 80M on my mac).